--- a/Changes
+++ b/Changes
@@ -1,9 +1,13 @@
 #
-# $Id$
+# $Id: Changes,v 0.2 2008/05/30 23:53:13 dankogai Exp dankogai $
 #
 # Revision history for Revision history for URI-Escape-XS
 #
-$Revision: 0.1 $ $Date: 2007/04/27 17:17:46 $
+$Revision: 0.2 $ $Date: 2008/05/30 23:53:13 $
+! XS.xs
+  s/ishexnumber/isxdigit/g # for better compatibility
+  http://rt.cpan.org/Public/Bug/Display.html?id=32556
+  http://rt.cpan.org/Public/Bug/Display.html?id=28583
 ! lib/URI/Escape/XS.pm
   POD fixes.
 
