--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 #
-# $Id: Changes,v 0.2 2008/05/30 23:53:13 dankogai Exp dankogai $
+# $Id: Changes,v 0.2 2008/05/30 23:53:13 dankogai Exp $
 #
 # Revision history for Revision history for URI-Escape-XS
 #
