--- a/Changes
+++ b/Changes
@@ -1,9 +1,15 @@
 #
-# $Id: Changes,v 0.6 2009/10/07 11:40:30 dankogai Exp dankogai $
+# $Id: Changes,v 0.7 2010/05/04 06:02:38 dankogai Exp dankogai $
 #
 # Revision history for Revision history for URI-Escape-XS
 #
-$Revision: 0.6 $ $Date: 2009/10/07 11:40:30 $
+$Revision: 0.7 $ $Date: 2010/05/04 06:02:38 $
+! XS.xs
+  Addressed:
+  #57168: memory leak in uri_escape ?
+  http://rt.cpan.org/Public/Bug/Display.html?id=57168
+
+0.06 2009/10/07 11:40:30
 + t/05-null.t
 ! XS.xs lib/URI/Escape/XS.pm
   Addressed:
