--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 #
-# $Id: Changes,v 0.7 2010/05/04 06:02:38 dankogai Exp dankogai $
+# $Id: Changes,v 0.7 2010/05/04 06:02:38 dankogai Exp $
 #
 # Revision history for Revision history for URI-Escape-XS
 #
