--- a/Changes
+++ b/Changes
@@ -1,9 +1,11 @@
 #
-# $Id: Changes,v 0.9 2012/08/06 01:44:20 dankogai Exp dankogai $
+# $Id: Changes,v 0.10 2013/02/25 17:24:25 dankogai Exp dankogai $
 #
 # Revision history for Revision history for URI-Escape-XS
 #
-$Revision: 0.9 $ $Date: 2012/08/06 01:44:20 $
+$Revision: 0.10 $ $Date: 2013/02/25 17:24:25 $
+! lib/URI/Escape/XS.pm README
+  Updated mail address
 ! XS.xs
   Pulled: https://github.com/dankogai/p5-uri-escape-xs/pull/2
 
